// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useFormula normal expression 1 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "attrs": Object {
                  "id": "88d64c7c-1111-4eea-be97-133e12c8c1ce",
                  "kind": "Variable",
                  "name": "num1",
                  "namespaceId": "eb373fbc-a6e9-40a6-8c4b-45cda7230dda",
                },
                "code": "Variable",
                "display": "num1",
                "errors": Array [],
                "hide": false,
                "renderText": undefined,
                "type": "string",
                "value": "num1",
              },
              "type": "FormulaType",
            },
          ],
          "text": "num1",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`useFormula normal: "foo_bar"(9) -> "123123" 1`] = `
Array [
  "Position unmatched",
  Object {
    "content": Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "marks": Array [
                Object {
                  "attrs": Object {
                    "attrs": Object {
                      "id": "781a575f-37a6-4e03-b125-595b72b8d6fe",
                      "kind": "Variable",
                      "name": "foo_bar",
                      "namespaceId": "eb373fbc-a6e9-40a6-8c4b-45cda7230dda",
                    },
                    "code": "Variable",
                    "display": "foo_bar",
                    "errors": Array [],
                    "hide": false,
                    "renderText": undefined,
                    "type": "string",
                    "value": "foo_bar",
                  },
                  "type": "FormulaType",
                },
              ],
              "text": "foo_bar",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "doc",
    },
    "input": "=foo_bar",
    "position": 7,
  },
]
`;

exports[`useFormula spreadsheet expression 1 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "attrs": undefined,
                "code": "Equal",
                "display": "=",
                "errors": Array [],
                "hide": false,
                "renderText": undefined,
                "type": "any",
                "value": "=",
              },
              "type": "FormulaType",
            },
          ],
          "text": "=",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "attrs": Object {
                  "id": "88d64c7c-1111-4eea-be97-133e12c8c1ce",
                  "kind": "Variable",
                  "name": "num1",
                  "namespaceId": "eb373fbc-a6e9-40a6-8c4b-45cda7230dda",
                },
                "code": "Variable",
                "display": "num1",
                "errors": Array [],
                "hide": false,
                "renderText": undefined,
                "type": "string",
                "value": "num1",
              },
              "type": "FormulaType",
            },
          ],
          "text": "num1",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`useFormula spreadsheet: "= " " & num1 "(5) -> "Expected string but got number" 1`] = `
Array [
  "Position unmatched",
  Object {
    "content": Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "marks": Array [
                Object {
                  "attrs": Object {
                    "attrs": undefined,
                    "code": "Equal",
                    "display": "=",
                    "errors": Array [],
                    "hide": false,
                    "renderText": undefined,
                    "type": "any",
                    "value": "=",
                  },
                  "type": "FormulaType",
                },
              ],
              "text": "=",
              "type": "text",
            },
            Object {
              "marks": Array [
                Object {
                  "attrs": Object {
                    "attrs": undefined,
                    "code": "Space",
                    "display": " ",
                    "errors": Array [],
                    "hide": false,
                    "renderText": undefined,
                    "type": "any",
                    "value": " ",
                  },
                  "type": "FormulaType",
                },
              ],
              "text": " ",
              "type": "text",
            },
            Object {
              "marks": Array [
                Object {
                  "attrs": Object {
                    "attrs": undefined,
                    "code": "StringLiteral",
                    "display": "\\" \\"",
                    "errors": Array [],
                    "hide": false,
                    "renderText": undefined,
                    "type": "string",
                    "value": "\\" \\"",
                  },
                  "type": "FormulaType",
                },
              ],
              "text": "\\" \\"",
              "type": "text",
            },
            Object {
              "marks": Array [
                Object {
                  "attrs": Object {
                    "attrs": undefined,
                    "code": "Space",
                    "display": " ",
                    "errors": Array [],
                    "hide": false,
                    "renderText": undefined,
                    "type": "any",
                    "value": " ",
                  },
                  "type": "FormulaType",
                },
              ],
              "text": " ",
              "type": "text",
            },
            Object {
              "marks": Array [
                Object {
                  "attrs": Object {
                    "attrs": undefined,
                    "code": "Ampersand",
                    "display": "&",
                    "errors": Array [],
                    "hide": false,
                    "renderText": undefined,
                    "type": "string",
                    "value": "&",
                  },
                  "type": "FormulaType",
                },
              ],
              "text": "&",
              "type": "text",
            },
            Object {
              "marks": Array [
                Object {
                  "attrs": Object {
                    "attrs": undefined,
                    "code": "Space",
                    "display": " ",
                    "errors": Array [],
                    "hide": false,
                    "renderText": undefined,
                    "type": "any",
                    "value": " ",
                  },
                  "type": "FormulaType",
                },
              ],
              "text": " ",
              "type": "text",
            },
            Object {
              "marks": Array [
                Object {
                  "attrs": Object {
                    "attrs": Object {
                      "id": "88d64c7c-1111-4eea-be97-133e12c8c1ce",
                      "kind": "Variable",
                      "name": "num1",
                      "namespaceId": "eb373fbc-a6e9-40a6-8c4b-45cda7230dda",
                    },
                    "code": "Variable",
                    "display": "num1",
                    "errors": Array [
                      Object {
                        "message": "Expected string but got number",
                        "type": "type",
                      },
                    ],
                    "hide": false,
                    "renderText": undefined,
                    "type": "string",
                    "value": "num1",
                  },
                  "type": "FormulaType",
                },
              ],
              "text": "num1",
              "type": "text",
            },
            Object {
              "marks": Array [
                Object {
                  "attrs": Object {
                    "attrs": undefined,
                    "code": "Space",
                    "display": " ",
                    "errors": Array [],
                    "hide": false,
                    "renderText": undefined,
                    "type": "any",
                    "value": " ",
                  },
                  "type": "FormulaType",
                },
              ],
              "text": " ",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "doc",
    },
    "input": "= \\" \\" & num1 ",
    "position": 8,
  },
]
`;

exports[`useFormula spreadsheet: "= Untitled"(1) -> "BlockClass" 1`] = `
Array [
  "Position unmatched",
  Object {
    "content": Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "marks": Array [
                Object {
                  "attrs": Object {
                    "attrs": undefined,
                    "code": "Equal",
                    "display": "=",
                    "errors": Array [],
                    "hide": false,
                    "renderText": undefined,
                    "type": "any",
                    "value": "=",
                  },
                  "type": "FormulaType",
                },
              ],
              "text": "=",
              "type": "text",
            },
            Object {
              "marks": Array [
                Object {
                  "attrs": Object {
                    "attrs": undefined,
                    "code": "Space",
                    "display": " ",
                    "errors": Array [],
                    "hide": false,
                    "renderText": undefined,
                    "type": "any",
                    "value": " ",
                  },
                  "type": "FormulaType",
                },
              ],
              "text": " ",
              "type": "text",
            },
            Object {
              "marks": Array [
                Object {
                  "attrs": Object {
                    "attrs": Object {
                      "id": "eb373fbc-a6e9-40a6-8c4b-45cda7230dda",
                      "kind": "Block",
                      "name": "Untitled",
                      "namespaceId": "eb373fbc-a6e9-40a6-8c4b-45cda7230dda",
                    },
                    "code": "Block",
                    "display": "Untitled",
                    "errors": Array [],
                    "hide": true,
                    "renderText": [Function],
                    "type": "Block",
                    "value": "#CurrentBlock",
                  },
                  "type": "FormulaType",
                },
              ],
              "text": "Untitled",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "doc",
    },
    "input": "= #CurrentBlock",
    "position": 2,
  },
]
`;

exports[`useFormula spreadsheet: "=foo_bar"(9) -> "123123" 1`] = `
Array [
  "Position unmatched",
  Object {
    "content": Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "marks": Array [
                Object {
                  "attrs": Object {
                    "attrs": undefined,
                    "code": "Equal",
                    "display": "=",
                    "errors": Array [],
                    "hide": false,
                    "renderText": undefined,
                    "type": "any",
                    "value": "=",
                  },
                  "type": "FormulaType",
                },
              ],
              "text": "=",
              "type": "text",
            },
            Object {
              "marks": Array [
                Object {
                  "attrs": Object {
                    "attrs": Object {
                      "id": "781a575f-37a6-4e03-b125-595b72b8d6fe",
                      "kind": "Variable",
                      "name": "foo_bar",
                      "namespaceId": "eb373fbc-a6e9-40a6-8c4b-45cda7230dda",
                    },
                    "code": "Variable",
                    "display": "foo_bar",
                    "errors": Array [],
                    "hide": false,
                    "renderText": undefined,
                    "type": "string",
                    "value": "foo_bar",
                  },
                  "type": "FormulaType",
                },
              ],
              "text": "foo_bar",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "doc",
    },
    "input": "=foo_bar",
    "position": 8,
  },
]
`;
